--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,8 @@ ADD package.json /package.json
 
 ENV NODE_PATH=/node_modules
 ENV PATH=$PATH:/node_modules/.bin
+
+RUN yarn config set registry http://registry.npm.taobao.org/
 RUN yarn install
 
 WORKDIR /app
